# sintez

./: CONTROLLER_FULL_AUDIT_2026-02-11.md  README.md  parse_xlsx.py  read_excel.py
docs/: ASUDD_NODE_DISCOVERY.md
handoff/: README.md
openwrt/: README.md
spectr_utmc/spectr_utmc_cpp/: ACTION_PLAN.md  BUILD_FOR_TESTING.md  CHECKLIST.md  CMakeLists.txt  CODE_FIX_FINAL.md  COMMAND_SEQUENCE_TEST_RESULTS.md  COMPARISON_ORIGINAL.md  COMPLETE_DOCUMENTATION_ANALYSIS.md  COMPLETE_SOLUTION.md  CONTROLLER_INTERFACES_ANALYSIS.md  CONTROLLER_MANAGEMENT_ANALYSIS.md  CONTROLLER_REMOTE_CONTROL.md  DEEP_CONTROLLER_ANALYSIS.md  DEPLOY.md  DOCUMENTATION_ANALYSIS_COMPLETE.md  FINAL_DOCUMENTATION_REPORT.md  HOW_TO_ENABLE_REMOTE_CONTROL.md  HOW_TO_TEST.md  IRZ_ROUTER_LOGIC.md  MODE_MAPPING_ANALYSIS.md  MODE_MAPPING_FINAL.md  NEXT_ACTIONS.md  NEXT_STEPS.md  NEXT_TEST_STEPS.md  NODEJS_CODE_ANALYSIS.md  NODEJS_SET_YF_ANALYSIS.md  OID_FIX_RESULTS.md  OPUS4_RESEARCH_ANALYSIS.md  PROMPTS_BY_AUDIENCE.md  PROMPT_FOR_COLLECTING_SCN_INFO.md  PROTOCOL_ANALYSIS_FINAL.md  QUICKSTART.md  QUICK_PROMPT_FOR_FORUMS.txt  QUICK_TEST.md  README.md  REMOTE_CONTROL_SETTINGS_ANALYSIS.md  REPLACE.md  SCN_ANALYSIS.md  SCN_ANALYSIS_FROM_CODE.md  SCN_FORMAT_RESEARCH_PROMPT.md  (+77 more)
spectr_utmc/spectr_utmc_cpp/include/: config.h  object_manager.h  snmp_handler.h
spectr_utmc/spectr_utmc_cpp/src/: config.cpp  main.cpp  object_manager.cpp  snmp_handler.cpp  spectr_protocol.cpp  tcp_client.cpp  test_controller.cpp
spectr_utmc/spectr_utmc_cpp/virtual_controller/: snmp_agent_emulator.py
tools/: connectivity_check.sh  (+5 more)
(+348 files in other folders)
